--- a/ms_commande/src/main/resources/application.properties
+++ b/ms_commande/src/main/resources/application.properties
@@ -37,3 +37,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 # Payment microservice URL
 payment-service.url=http://localhost:5000
+
+#feign client debugging
+logging.level.feign.client=DEBUG
+logging.level.com.example.ms_commande.proxy=DEBUG
