--- a/ms_commande/src/main/resources/application.properties
+++ b/ms_commande/src/main/resources/application.properties
@@ -41,3 +41,4 @@ payment-service.url=http://localhost:5000
 #feign client debugging
 logging.level.feign.client=DEBUG
 logging.level.com.example.ms_commande.proxy=DEBUG
+feign.client.config.default.loggerLevel=full
